# logging

./: CMakeLists.txt
include/: logging.h
src/: logging.c
src/tests/: main.c
